@@ -1,0 +1,13 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2012-03-23 09:58
+
+$extensionPath = t3lib_extMgm::extPath('ics_od_categories');
+return array(
+	'tx_icsodcategories_appstore' => $extensionPath . 'class.tx_icsodcategories_appstore.php',
+	'tx_icsodcategories_datastore' => $extensionPath . 'class.tx_icsodcategories_datastore.php',
+	'tx_icsodcategories_tools' => $extensionPath . 'lib/class.tx_icsodcategories_tools.php',
+	'tx_icsodcategories_od_getcategories_command' => $extensionPath . 'opendata/class.tx_icsodcategories_od_getcategories_command.php',
+	'tx_icsodcategories_category_datasource' => $extensionPath . 'opendata/datasource/class.tx_icsodcategories_category_datasource.php',
+);
+?>
