@@ -1,3 +1,6 @@
+2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
+	* Fix: update autoload
+
 2012-03-22 Emilie SAGNIEZ  <emilie@in-cite.net>
 	* Change to version 1.1.1
 	* Fix: add picto only if exist
